--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.13",
+    "lwk-rn": "^0.8.2",
     "react": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-status-bar-height": "^2.6.0"
+    "react-native-localization": "^2.3.2",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
