--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
+    "install": "^0.13.0",
     "lwk-rn": "^0.8.2",
+    "npm": "^10.9.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-localization": "^2.3.2",
