--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.1.14",
+    "@react-navigation/stack": "^7.0.18",
     "install": "^0.13.0",
     "lwk-rn": "^0.8.2",
     "npm": "^10.9.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-localization": "^2.3.2",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^10.2.0"
   },
