--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "postinstall": "rn-nodeify --install buffer,events,process,stream,util,inherits,fs,path,assert,crypto --hack"
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
@@ -16,30 +15,17 @@
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
-    "assert": "^1.5.1",
-    "bip39": "^3.1.0",
-    "buffer": "^4.9.2",
-    "events": "^1.1.1",
-    "install": "^0.13.0",
     "lwk-rn": "^0.8.2",
     "npm": "^10.9.2",
-    "path-browserify": "^0.0.0",
-    "process": "^0.11.10",
     "react": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-level-fs": "^3.0.1",
     "react-native-localization": "^2.3.2",
-    "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-vector-icons": "^10.2.0",
-    "readable-stream": "^1.0.33",
-    "rn-nodeify": "^10.3.0",
-    "stream-browserify": "^1.0.0",
-    "util": "^0.10.4"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -63,27 +49,5 @@
   },
   "engines": {
     "node": ">=18"
-  },
-  "react-native": {
-    "crypto": "react-native-crypto",
-    "path": "path-browserify",
-    "fs": "react-native-level-fs",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "stream": "stream-browserify"
-  },
-  "browser": {
-    "crypto": "react-native-crypto",
-    "path": "path-browserify",
-    "fs": "react-native-level-fs",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "stream": "stream-browserify"
   }
 }
