--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
+    "bip39": "^3.1.0",
     "lwk-rn": "^0.8.2",
     "npm": "^10.9.2",
     "react": "18.3.1",
