--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
@@ -23,11 +24,14 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-level-fs": "^3.0.1",
     "react-native-localization": "^2.3.2",
+    "react-native-qrcode-svg": "^6.3.12",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "^15.10.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
