Added scan screen

--- a/ios/psetgui/Info.plist
+++ b/ios/psetgui/Info.plist
@@ -35,6 +35,8 @@
 	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to your Camera.</string>	
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
