--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-screens": "^4.3.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^15.10.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-vision-camera": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
