--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
     "bip39": "^3.1.0",
-    "lwk-rn": "^0.8.2",
+    "install": "^0.13.0",
+    "lwk-rn": "github:Blockstream/lwk-rn#updates",
     "npm": "^10.9.2",
     "react": "18.3.1",
     "react-native": "0.76.3",
