--- a/ios/psetgui/Info.plist
+++ b/ios/psetgui/Info.plist
@@ -41,6 +41,8 @@
 	<array>
 		<string>arm64</string>
 	</array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>$(PRODUCT_NAME) Authentication with TouchId or FaceID</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
