--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
+    "bignumber.js": "^9.1.2",
     "bip39": "^3.1.0",
     "install": "^0.13.0",
     "lwk-rn": "^0.8.2",
     "npm": "^10.9.2",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-biometrics": "^3.0.1",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-level-fs": "^3.0.1",
