--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "buffer": "^4.9.2",
     "events": "^1.1.1",
     "install": "^0.13.0",
-    "lwk-rn": "0.8.2-1.0",
+    "lwk-rn": "github:dev4bitcoin/lwk-rn",
     "npm": "^10.9.2",
     "path-browserify": "^0.0.0",
     "process": "^0.11.10",
