--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "readable-stream": "^1.0.33",
     "rn-nodeify": "^10.3.0",
     "stream-browserify": "^1.0.0",
+    "toastify-react-native": "^5.0.4",
     "util": "^0.10.4"
   },
   "devDependencies": {
