--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "buffer": "^4.9.2",
     "events": "^1.1.1",
     "install": "^0.13.0",
-    "lwk-rn": "https://github.com/lvaccaro/lwk-rn",
     "npm": "^10.9.2",
+    "lwk-rn": "https://github.com/lvaccaro/lwk-rn.git#npmrelease",
     "path-browserify": "^0.0.0",
     "process": "^0.11.10",
     "react": "18.3.1",
