--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start": "react-native start",
     "test": "jest",
     "clean": "rm -rf node_modules package-lock.json ios/Pods ios/build ios/Podfile.lock",
-    "postinstall": "rn-nodeify --install buffer,events,process,stream,util,inherits,fs,path,assert,crypto --hack",
     "build": "npm install && npx react-native run-ios --force-pods"
   },
   "dependencies": {
@@ -19,26 +18,17 @@
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
-    "assert": "^1.5.1",
     "bignumber.js": "^9.1.2",
-    "bip39": "^3.1.0",
-    "buffer": "^4.9.2",
-    "events": "^1.1.1",
-    "install": "^0.13.0",
-    "npm": "^10.9.2",
     "lwk-rn": "https://github.com/lvaccaro/lwk-rn.git#npmrelease",
-    "path-browserify": "^0.0.0",
-    "process": "^0.11.10",
+    "npm": "^10.9.2",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-biometrics": "^3.0.1",
-    "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-haptic-feedback": "^2.3.3",
-    "react-native-level-fs": "^3.0.1",
     "react-native-localization": "^2.3.2",
     "react-native-qrcode-svg": "^6.3.12",
-    "react-native-randombytes": "^3.6.1",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
     "react-native-status-bar-height": "^2.6.0",
@@ -46,11 +36,7 @@
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.3",
-    "readable-stream": "^1.0.33",
-    "rn-nodeify": "^10.3.0",
-    "stream-browserify": "^1.0.0",
-    "toastify-react-native": "^5.0.4",
-    "util": "^0.10.4"
+    "toastify-react-native": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -74,27 +60,5 @@
   },
   "engines": {
     "node": ">=18"
-  },
-  "react-native": {
-    "crypto": "react-native-crypto",
-    "path": "path-browserify",
-    "fs": "react-native-level-fs",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "stream": "stream-browserify"
-  },
-  "browser": {
-    "crypto": "react-native-crypto",
-    "path": "path-browserify",
-    "fs": "react-native-level-fs",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "stream": "stream-browserify"
   }
 }
