--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
     "bignumber.js": "^9.1.2",
+    "buffer": "^6.0.3",
     "lwk-rn": "0.9.0-1.0.0",
     "npm": "^10.9.2",
     "react": "18.3.1",
