--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "build": "npm install && npx react-native run-ios --force-pods"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-clipboard/clipboard": "^1.15.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
+    "@realm/react": "^0.11.0",
     "bignumber.js": "^9.1.2",
     "buffer": "^6.0.3",
     "lwk-rn": "0.9.0-1.0.0",
@@ -34,9 +35,9 @@
     "react-native-screens": "^4.3.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^15.10.1",
-    "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.3",
+    "realm": "^20.1.0",
     "toastify-react-native": "^5.0.4"
   },
   "devDependencies": {
